versioned_docs/version-1.0.2/flexbox-grid/justify-self.mdx
---
title: Justify Self
---

import ClassList from '@site/src/components/ClassList/ClassList';
import CodePreview from '@site/src/components/CodePreview/CodePreview';

# Justify Self

Horizontally aligns an individual flex or grid item within its container along the main axis.

<ClassList
  classData={[
    {
        className: 'js-auto',
        properties: [
            'justify-self: auto;'
        ]
    },
    {
        className: 'js-n',
        properties: [
            'justify-self: normal;'
        ]
    },
    {
        className: 'js-stretch',
        properties: [
            'justify-self: stretch;'
        ]
    },
    {
        className: 'js-c',
        properties: [
            'justify-self: center;'
        ]
    },
    {
        className: 'js-s',
        properties: [
            'justify-self: start;'
        ]
    },
    {
        className: 'js-e',
        properties: [
            'justify-self: end;'
        ]
    },
    {
        className: 'js-fs',
        properties: [
            'justify-self: flex-start;'
        ]
    },
    {
        className: 'js-fe',
        properties: [
            'justify-self: flex-end;'
        ]
    },
    {
        className: 'js-l',
        properties: [
            'justify-self: left;'
        ]
    },
    {
        className: 'js-r',
        properties: [
            'justify-self: right;'
        ]
    }
  ]}
/>