versioned_docs/version-2.0.0/flexbox-grid/justify-self.mdx
---
title: Justify Self
description: Controls the alignment of a single grid element relative to its inline axis.
slug: /justify-self
---

import ClassList from '@site/src/components/ClassList/ClassList';
import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';

Controls the alignment of a single grid element relative to its inline axis.

<ClassList
  classData={[
    {
        className: 'js-auto',
        properties: [
            'justify-self: auto;'
        ]
    },
    {
        className: 'js-n',
        properties: [
            'justify-self: normal;'
        ]
    },
    {
        className: 'js-stretch',
        properties: [
            'justify-self: stretch;'
        ]
    },
    {
        className: 'js-c',
        properties: [
            'justify-self: center;'
        ]
    },
    {
        className: 'js-s',
        properties: [
            'justify-self: start;'
        ]
    },
    {
        className: 'js-e',
        properties: [
            'justify-self: end;'
        ]
    },
    {
        className: 'js-fs',
        properties: [
            'justify-self: flex-start;'
        ]
    },
    {
        className: 'js-fe',
        properties: [
            'justify-self: flex-end;'
        ]
    },
    {
        className: 'js-l',
        properties: [
            'justify-self: left;'
        ]
    },
    {
        className: 'js-r',
        properties: [
            'justify-self: right;'
        ]
    }
  ]}
/>

### Using breakpoints

The utilization of breakpoint modifiers like `sm:js-*`, `md:js-*`, `lg:js-*` enables the targeting of specific utilities in disparate viewports.